--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
     <footer>
         <p>&copy; 2025 Ocha. All rights reserved.</p>
     </footer>
+<!-- JavaScript External -->
+        <script src="script.js"></script>
 </body>
 
 </html>
