--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
         <br>
         <div class="introduction">
-            <p>Website ini akan membantu kamu dalam mengkonversi suhu, cukup masukkan suhu derajat Celsius (&deg;C)  yang ingin kamu ubah menjadi Fahrenheit (&deg;F).</p>
+            <p>Website ini akan membantu kamu dalam mengkonversi suhu, cukup masukkan suhu derajat Celsius (&deg;C)  yang ingin kamu ubah menjadi Fahrenheit (&deg;F) lalu tekan tombol konversi.</p>
         </div>
         <br>
         <div class="input-group">
